--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <div id="content">Loading...</div>
-    <script src="popup.js"></script>
+    <div id="content">Working!</div>
+    <script src="background.js"></script>
 </body>
 
 </html>
